minitrace-macro/tests/trace/ui/err/003-name-is-boolean.rs
use minitrace::trace;

#[trace(name = true)]
fn f() {}

fn main() {}
